k8s-nginx/nginx-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx-nodeport-service
spec:
    type: NodePort
    selector:
        app: nginx
    ports:
        - port: 80
          targetPort: 80
          nodePort: 30000
