k8s-nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nginx-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                      service:
                          name: nginx-service
                          port:
                              number: 80
